fix: fix category on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,6 @@ body {
 
 @media (max-width: 979px) {
     .categories__list {
-        justify-content: space-between;
         gap: 8px;
     }
     .categories__item {
@@ -460,6 +459,13 @@ body {
 }
 
 @media (max-width: 429px) {
+    .categories__list {
+        justify-content: center;
+        gap: 4px;
+    }
+    .category__title::after {
+        margin-left: 4px;
+    }
     .categories__item {
         font-size: 16px;
         line-height: 1.14;
